tests/error/modifier_errors/variable_leak.err
Error: Variable not defined (at $FILE:8:11)
  | 
6 |     with power(1):
7 |         x = 1
8 |     return x + 2
  |            ^ `x` is not defined

Guppy compilation failed due to 1 previous error
